# QuantaTerm

./: .gitignore  Cargo.toml  FONT_ARCHITECTURE.md  Makefile  PHASE_2_DEPENDENCIES.md  PHASE_2_IMPLEMENTATION_GUIDE.md  PHASE_2_TASKS.md  PHASE_3_DEPENDENCIES.md  PHASE_3_IMPLEMENTATION_GUIDE.md  PHASE_3_TASKS.md  PROJECT_PLAN.md  README.md
.github/workflows/: ci.yml  phase3.yml  release.yml  rust.yml
benchmarks/: Cargo.toml
benchmarks/src/: benchmark_runner.rs  harness.rs  lib.rs  pty_harness.rs  synthetic.rs
crates/ai/: Cargo.toml
crates/ai/src/: lib.rs
crates/blocks/: Cargo.toml
crates/blocks/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: app.rs  lib.rs  main.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  logging.rs
crates/plugins-api/: Cargo.toml
crates/plugins-api/src/: lib.rs
crates/plugins-host/: Cargo.toml
crates/plugins-host/src/: actions.rs  host_context.rs  lib.rs  limits.rs  manifest.rs  runtime.rs
crates/pty/: Cargo.toml
crates/pty/src/: lib.rs  parser.rs
crates/pty/tests/: integration_test.rs
crates/renderer/: Cargo.toml
crates/renderer/src/: lib.rs
crates/renderer/src/font/: atlas.rs  loader.rs  mod.rs  shaper.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs
docs/: VTE_INTEGRATION_SUMMARY.md  architecture.md  logging.md  performance_harness.md  phase0_implementation.md  plugin_dev.md
docs/api/: README.md
examples/plugins/: README.md
examples/plugins/hello-world/: Cargo.toml  README.md  plugin.toml
examples/plugins/hello-world/src/: lib.rs
scripts/: demo_phase0.sh  demo_visual_feedback.sh  pre-commit  sgr_demo.sh  test_pty_integration.sh  validate_phase2.sh  validate_phase3.sh  verify-logging.sh
test-release/: LICENSE  VERSION
tests/: Cargo.toml
tests/src/: color_rendering_demo.rs  debug_color_test.rs  lib.rs  renderer_visual_feedback_test.rs  sgr_integration.rs  vttest_subset.rs
