[package]
name = "quantaterm-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
quantaterm-core = { path = "../crates/core" }
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true