[package]
name = "quantaterm-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
quantaterm-core = { path = "../crates/core" }
quantaterm-pty = { path = "../crates/pty" }
quantaterm-blocks = { path = "../crates/blocks" }
quantaterm-renderer = { path = "../crates/renderer" }
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true