[package]
name = "quantaterm-blocks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
quantaterm-core = { path = "../core" }
quantaterm-renderer = { path = "../renderer" }
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
bitflags = "2.4"
arboard.workspace = true
