[package]
name = "quantaterm-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "quantaterm"
path = "src/main.rs"

[dependencies]
quantaterm-core = { path = "../core" }
quantaterm-renderer = { path = "../renderer" }
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
winit.workspace = true
wgpu.workspace = true
pollster.workspace = true
