[package]
name = "quantaterm-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
quantaterm-core = { path = "../core" }
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
toml = "0.8"
dirs = "5.0"
