[package]
name = "quantaterm-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }