[package]
name = "quantaterm-pty"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
quantaterm-core = { path = "../core" }
quantaterm-blocks = { path = "../blocks" }
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
portable-pty = "0.8"
vte = "0.15"
