[package]
name = "quantaterm-renderer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
quantaterm-core = { path = "../core" }
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
wgpu.workspace = true
winit.workspace = true
bitflags = "2.4"