[package]
name = "quantaterm-renderer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
quantaterm-core = { path = "../core" }
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
wgpu.workspace = true
winit.workspace = true
bitflags = "2.4"

# Font handling
ab_glyph = "0.2"
unicode-normalization = "0.1"
unicode-script = "0.5"

# Atlas and packing
rectangle-pack = "0.4"
lru = "0.12"

# Platform-specific font loading
[target.'cfg(target_os = "linux")'.dependencies]
fontconfig = "0.8"

[target.'cfg(target_os = "macos")'.dependencies]
core-text = "20.1"
core-foundation = "0.9"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["dwrite", "d2d1", "winuser"] }